Mon Sep 15 15:17:07 2003  George Lebl <jirka@5z.com>

	* drivemount.c: when started in lockdown mode, hide the preferences
	  item

2003-08-24  Kevin Vandersloot

	* drivemount.c: Properly scale custom pixmaps and don't unref the tooltips since
	they don't need it. Patch from berbericfmiuni-passaude. Fixes bug #118675

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* drivemount.c, properties.c:  HIGify widget padding between the 
	vbox and action area of the dialog.  Thanks to <chris@gnome-de.org>
	Christian - Manny Calavera - Neumair.
	
Tue Jul 08 16:05:37 2003  George Lebl <jirka@5z.com>

	* drivemount.c: fix memory leak on widget destruction

Mon Jul 07 11:44:58 2003  George Lebl <jirka@5z.com>

	* properties.c: Follow key-writability

	* drivemount.[ch], properties.c: HIGify the error dialogue boxes
	  with code yet again stolen from gsearchtool

2003-06-15  Kevin Vandersloot

	* drivemount.c: add keybindings for eject and browse

2003-06-03  Kevin Vandersloot

	* drivemount.c: expand for Fitts' law

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify the action area of the preferences dialog.  

2003-04-22  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  More HIGification of the preferences dialog.  
	Also, hook up a help button.
	
	* drivemount.c:  Hook up help in the popup menu.

2003-04-03  Kevin Vandersloot <kfv101@psu.edu>

	* drivemount.c: If the locale is not utf8 then convert the error string to utf8. Fixes 
	bug #95480

2003-04-01  Kevin Vandersloot <kfv101@psu.edu>

	* properties.c: HIGify this dialog
	
	* drivemount.c: fix small problem that contributed to custom icon problems

2003-03-30  Kevin Vandersloot <kfv101@psu.edu>

	* properties.c: translate frame label. Fixes bug #103091

2003-03-30  Kevin Vandersloot <kfv101@psu.edu>

	* properties.c: fix saving of custom icons. Fixes bug #90922

2003-01-18 John Fleck <jfleck@inkstain.net>

	* help/C/Makefile.am