@@ -1,3 +1,8 @@
+2003-11-30  Kevin Vandersloot
+
+	* drivemountc, properties.c: Add USB stick icons. Patch from
+	berberic fmi uni-passau de. Fixes bug #110167
+
 Mon Sep 15 15:17:07 2003  George Lebl <jirka@5z.com>
 
 	* drivemount.c: when started in lockdown mode, hide the preferences
